<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_add"
    tools:context=".ui.AddFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="46dp"
        tools:ignore="MissingConstraints">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_bill_detail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#ffff00"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"
            tools:ignore="MissingClass,MissingConstraints" >

            <Spinner
                android:id="@+id/add_spinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:entries="@array/add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="MissingClass,MissingConstraints"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">


            <Spinner
                android:id="@+id/add_spinner_type"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:gravity="center"
                android:textAlignment="center"
                app:layout_constraintStart_toEndOf="@+id/add_tv_type"
                app:layout_constraintTop_toTopOf="@+id/add_img_type" />

            <TextView
                android:id="@+id/add_tv_time"
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="时间"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="@+id/add_img_time"
                app:layout_constraintTop_toBottomOf="@+id/add_img_time" />

            <ImageView
                android:id="@+id/add_img_time"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_time"
                app:layout_constraintStart_toStartOf="@+id/add_img_account"
                app:layout_constraintTop_toBottomOf="@+id/add_tv_account" />

            <EditText
                android:id="@+id/add_et_money"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:gravity="center"
                android:inputType="numberDecimal"
                app:layout_constraintStart_toEndOf="@+id/add_tv1_type"
                app:layout_constraintTop_toTopOf="@+id/add_img_money" />

            <EditText
                android:id="@+id/add_et_description"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:gravity="center"
                app:layout_constraintStart_toEndOf="@+id/add_tv1_type2"
                app:layout_constraintTop_toTopOf="@+id/add_img_description" />

            <TextView
                android:id="@+id/add_tv1_type"
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="金额"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="@+id/add_img_money"
                app:layout_constraintTop_toBottomOf="@+id/add_img_money" />

            <TextView
                android:id="@+id/add_tv1_type2"
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="描述"
                android:textSize="18dp"
                app:layout_constraintStart_toStartOf="@+id/add_img_description"
                app:layout_constraintTop_toBottomOf="@+id/add_img_description" />

            <ImageView
                android:id="@+id/add_img_money"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="75dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/ic_money"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/add_img_description"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="@+id/add_img_time"
                app:layout_constraintTop_toBottomOf="@+id/add_tv_time" />

            <TextView
                android:id="@+id/add_tv_account"
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="账户"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="@+id/add_img_account"
                app:layout_constraintTop_toBottomOf="@+id/add_img_account" />

            <EditText
                android:id="@+id/add_et_time"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:clickable="true"
                android:ems="10"
                android:focusable="false"
                android:gravity="center"
                android:inputType="textPersonName"
                android:onClick="showTimePickerDialog"
                app:layout_constraintStart_toEndOf="@+id/add_tv_time"
                app:layout_constraintTop_toTopOf="@+id/add_img_time" />

            <ImageView
                android:id="@+id/add_img_account"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_account"
                app:layout_constraintStart_toStartOf="@+id/add_img_type"
                app:layout_constraintTop_toBottomOf="@+id/add_tv_type" />

            <Button
                android:id="@+id/add_bt_commit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/yellow"
                android:text="确认"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_et_description"
                app:layout_constraintVertical_bias="0.135"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/add_tv_type"
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="类型"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="@+id/add_img_type"
                app:layout_constraintTop_toBottomOf="@+id/add_img_type" />

            <ImageView
                android:id="@+id/add_img_type"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_type"
                app:layout_constraintStart_toStartOf="@+id/add_img_money"
                app:layout_constraintTop_toBottomOf="@+id/add_tv1_type" />

            <Spinner
                android:id="@+id/add_spinner_account"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:gravity="center"
                android:textAlignment="center"
                app:layout_constraintStart_toEndOf="@+id/add_tv_account"
                app:layout_constraintTop_toTopOf="@+id/add_img_account" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</FrameLayout>