<?xml version="1.0" encoding="utf-8"?>
<!--用于记账明细的item-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/recyclerView_fg_account_">


    <TextView
        android:id="@+id/textView_type"
        android:layout_width="44dp"
        android:layout_height="25dp"
        android:layout_marginTop="12dp"
        android:text="日用"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16" />

    <TextView
        android:id="@+id/textView_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="04月25日 星期二"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView_money"
        app:layout_constraintTop_toBottomOf="@+id/textView_money"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView_money"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginEnd="10dp"
        android:text="-200"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.269" />

    <TextView
        android:id="@+id/textView_account"
        android:layout_width="116dp"
        android:layout_height="26dp"
        android:text="工商银行卡"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.311"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444" />


</androidx.constraintlayout.widget.ConstraintLayout>