...
        android:title="@string/title_size" />
    <item
        android:id="@+id/navigation_item2"
        android:icon="@drawable/ic_pie_chart_24"
        android:title="@string/title_chart" />
    <item
        android:id="@+id/navigation_item3"
        android:icon="@drawable/ic_add_24"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_item4"
        android:icon="@drawable/ic_account_24"
...
